--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Parenty</string>
+    <string name="newUser">Not a Member yet? Sign Up here.</string>
 </resources>
