--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Parenty</string>
     <string name="newUser">Not a Member yet? Sign Up here.</string>
+    <string name="lbl_enter_otp">Enter OTP</string>
+    <string name="lbl_submit">SUBMIT</string>
+    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
+    <string name="msg_sit_back"><![CDATA[Sit back &amp; Relax! while we verify your mobile number]]></string>
+    <string name="msg_usertypecheck">Is this child\'s phone ?</string>
 </resources>
