--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
     <string name="msg_sit_back"><![CDATA[Sit back &amp; Relax! while we verify your mobile number]]></string>
     <string name="msg_usertypecheck">Is this child\'s phone ?</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
